Finished business account registration, business profile and business user can edit profile too.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,7 @@
     <string name="updateLocation">Update location</string>
     <string name="saveChanges">Save changes</string>
     <string name="oldPassword">Old password</string>
+    <string name="text_select_jobs">Select your jobs:</string>
+    <string name="work_teritory">Work teritory:</string>
+    <string name="job">Job:</string>
 </resources>
