--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="text_select_jobs">Select your jobs:</string>
     <string name="work_teritory">Work teritory:</string>
     <string name="job">Job:</string>
+    <string name="send_offer">Send offer</string>
 </resources>
